# a3-mission-launchpad

./: .gitignore  LICENSE  README.md  build_extension.bat  build_mod.bat  install-desktop.bat  install-desktop.sh  launchpad.spec  package.bat  package.sh  refactor.md  todo  util.py
.github/actions/publish-deliverables/: action.yml
.github/workflows/: client-app-ci.yml  codeql.yml  main-release.yml
a3hook/: CMakeLists.txt  a3hook.cpp  s3hook.cpp
docs/: CONTRIBUTING.md  INSTALLATION.md  SOURCE_INSTALL.md  TROUBLESHOOTING.md
launchpad_client/app/: forge.config.js  package-lock.json  package.json  tsconfig.json  vite.main.config.mjs  vite.preload.config.mjs  vite.renderer.config.mjs
launchpad_client/app/src/: Launchpad.ts  index.ts  main.js  menu.json  preload.ts
launchpad_client/app/src/arma/: detectArmaPaths.ts  launchArma3.ts
launchpad_client/app/src/bootstrap/: bootstrapDataDirectory.ts
launchpad_client/app/src/debug/: DebugSocketService.ts  types.ts
launchpad_client/app/src/drivers/: p3d.test.ts  p3dMesh.ts  p3dOdolMesh.ts  pbo.ts
launchpad_client/app/src/ipc/: IPCAPI.ts
launchpad_client/app/src/ipc/handlers/: handleBuildHEMTTProject.ts  handleBuildPBO.ts  handleDebugSocket.ts  handleDecodePAA.ts  handleFileAppendContents.ts  handleFileCreate.ts  handleFileDelete.ts  handleFileGetContents.ts  handleFileGetContentsPartial.ts  handleFileOrDirectoryExists.ts  handleFileRename.ts  handleFileSetContents.ts  handleGetP3dPreviewMesh.ts  handleGetSettings.ts  handleInitHEMTTProject.ts  handleInstallHemttWinget.ts  handleLintHEMTTProject.ts  handleListDirectory.ts  handleListRptFiles.ts  handleLogMessage.ts  handleManagedModProjectOps.ts  handleManagedModProjectsRequest.ts  handleManagedScenarioOps.ts  handleManagedScenariosRequest.ts  handleMissionBuildRequest.ts  handleMissionProjectTreeRequest.ts  handleProcessManager.ts  handleRevealPath.ts  handleSetSettings.ts  handleShellExec.ts  handleShowOpenDialog.ts  handleSshRemoteLogs.ts  handleTestingAutotestResultGet.ts  handleTestingLaunch.ts  handleTestingModlist.ts  readHemttSpawnCommand.ts  syncManagedMissionsFromProfileHub.ts
launchpad_client/app/test/: debugSocketService.test.ts  debugTypes.test.ts  pbo.test.ts
launchpad_client/renderer/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
launchpad_client/renderer/public/: README.md
launchpad_client/renderer/src/: App.css  App.less  App.tsx  Util.ts  electronIpc.ts  missionMonacoSetup.ts
launchpad_client/renderer/src/api/: launchpad.ts
launchpad_client/renderer/src/components/: ArmaProcessMonitor.tsx  FileFolderInput.tsx  IntegratedScriptEditor.tsx  MissionEditModal.tsx  MissionGitHubModal.tsx  MissionResourceBrowser.tsx  P3dPreview.tsx  Sidebar.tsx  Spinner.tsx  SplashScreen.tsx  ThreeFiberScene.tsx
launchpad_client/renderer/src/components/AppSidebar/: AppSidebar.less  AppSidebar.tsx  SidebarBrand.tsx  SidebarFooter.tsx  SidebarNav.tsx  index.ts  navItems.ts  types.ts
launchpad_client/renderer/src/components/Editor/: IntegratedScriptEditor.tsx  ScriptEditorGoTo.tsx  ScriptEditorSearchPanel.tsx  ScriptEditorTabs.tsx  ScriptEditorToolbar.tsx  index.ts
launchpad_client/renderer/src/components/Editor/FileTree/: FileTree.tsx  (+8 more)
launchpad_client/renderer/src/components/MissionList/: CreateMissionModal.tsx  DeleteMissionModal.tsx  MissionContextMenu.less  MissionContextMenu.tsx  MissionList.less  MissionListStats.tsx  MissionListTable.tsx  MissionSearchBar.tsx  ModsProfileModal.tsx  PboBuildModal.tsx  index.ts  missionListPreferences.ts  missionUtils.ts
launchpad_client/renderer/src/lib/: armamaps.ts
launchpad_client/renderer/src/mission/: descriptionExt.ts  workshopModPath.ts
launchpad_client/renderer/src/pages/: Debugging.tsx  HomePage.tsx  Logging.tsx  MissionBuildPage.tsx  MissionList.tsx  ModProjects.tsx  SettingsPage.tsx  Testing.tsx
launchpad_client/renderer/static/: Arma 3 Preset zeus_ace_cba.html  README.md
launchpad_client/renderer/static/syntax/: ext.min.json  sqf.min.json
launchpad_client/scripts/: run-launchpad-backend.mjs
launchpad_mod/.hemtt/: project.toml
launchpad_mod/.hemttout/: ci_annotations.txt  last_build.hsb
launchpad_mod/addons/diagnostics/: $PBOPREFIX$  script_component.hpp
launchpad_mod/addons/main/: $PBOPREFIX$  CfgFunctions.hpp  script_macros.hpp  script_mod.hpp
launchpad_mod/addons/main/functions/: fn_call.sqf  fn_genId.sqf  fn_init.sqf  fn_onIpcInbound.sqf  fnc_asyncCall.sqf  fnc_getCallbackStatus.sqf  fnc_init.sqf
launchpad_mod/extension/: CMakeLists.txt  README.md
scripts/: package.bat  package.sh
